--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "karma": "~0.10.9",
         "karma-story-reporter": "~0.2.2",
         "grunt-karma": "~0.6.2"
+    },
+
+    "scripts":{
+        "test": "grunt buildTest --verbose"
     }
 }
